load game data from tar.gz file

--- a/wasm/web/index.html
+++ b/wasm/web/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="/game/supertuxkart.js"></script>
+    <script src="/script.js" type="module"></script>
   </head>
   <body>
 
