fix some scaling problems and re-enable controller support

--- a/wasm/web/index.html
+++ b/wasm/web/index.html
@@ -5,6 +5,6 @@
     <script src="/script.js" type="module"></script>
   </head>
   <body>
-    <canvas id="canvas" width="1366" height="768"></canvas>
+    <canvas id="canvas"></canvas>
   </body>
 </html>
