--- a/wasm/web/index.html
+++ b/wasm/web/index.html
@@ -7,17 +7,16 @@
       * {
         font-family: Arial, sans-serif;
       }
+      p {
+        font-size: 12px;
+        margin: 4px;
+      }
       #canvas {
         background-color: #222222;
       }
       #status_bar {
         display: flex;
         align-items: flex-start;
-      }
-      #status_text {
-        font-size: 12px;
-        margin: 4px;
-        margin-left: 4px;
       }
     </style>
   </head>
@@ -28,5 +27,7 @@
       <button id="start_button" disabled>Start Game</button>
       <p id="status_text">Downloading game files...</p>
     </div>
+    <p>This web port was made by <a href="https://github.com/ading2210/">ading2210</a>.</p>
+    <p>The source code is located at <a href="https://github.com/ading2210/stk-code/tree/wasm">github.com/ading2210/stk-code</a>.</p>
   </body>
 </html>
