split assets into 20mb chunks

--- a/wasm/web/index.html
+++ b/wasm/web/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>SuperTuxKart</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <script src="/game/supertuxkart.js"></script>
     <script src="/script.js" type="module" defer></script>
     <style>
